--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
 project(V8Study_x86_)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE "Debug")
 # 不设置报错如下: Embedder-vs-V8 build configuration mismatch.
 # On embedder side pointer compression is DISABLED while on V8 side it's ENABLED.
@@ -13,6 +13,7 @@ add_compile_options(-DV8_COMPRESS_POINTERS)
 
 INCLUDE_DIRECTORIES(
         lib/v8/include
+        lib/
 )
 
 add_executable(V8Study_x86_ src/main.cpp src/V8Engine.cpp src/V8Snapshot.cpp src/GlobalObject.cpp src/Utils.hpp)
@@ -46,6 +47,8 @@ if (ENABLE_SNAPSHOT)
             ${PROJECT_SOURCE_DIR}/lib/v8/platform/mac/snapshot/libcppgc_base.a
             ${PROJECT_SOURCE_DIR}/lib/v8/platform/mac/snapshot/libv8_cppgc_shared.a
             ${PROJECT_SOURCE_DIR}/lib/v8/platform/mac/snapshot/libv8_base_without_compiler.a
+#            v8pp
+            ${PROJECT_SOURCE_DIR}/lib/v8pp/libv8pp.a
     )
 else ()
     MESSAGE(STATUS "$$$ DISABLE_SNAPSHOT!!!")
@@ -54,12 +57,14 @@ else ()
         target_link_libraries(
                 V8Study_x86_
                 ${zlib}
+                ${PROJECT_SOURCE_DIR}/lib/v8pp/libv8pp.a
                 ${PROJECT_SOURCE_DIR}/libv8_monolith.a
         )
     else()
         target_link_libraries(
                 V8Study_x86_
                 ${zlib}
+                ${PROJECT_SOURCE_DIR}/lib/v8pp/libv8pp.a
                 ${PROJECT_SOURCE_DIR}/lib/v8/platform/mac/libv8_monolith.a
         )
     endif ()
