支持 console 日志打印到控制台

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ INCLUDE_DIRECTORIES(
         lib/
 )
 
-add_executable(V8Study_x86_ src/main.cpp src/V8Engine.cpp src/V8Snapshot.cpp src/GlobalObject.cpp src/Utils.hpp)
+add_executable(V8Study_x86_ src/main.cpp src/V8Engine.cpp src/V8Snapshot.cpp src/GlobalObject.cpp src/Utils.hpp src/Console.cpp)
 
 MESSAGE(STATUS "SOURCE_DIR = ${PROJECT_SOURCE_DIR}.")
 
